tests/semantica/invalid/metodos/test11.ctds
program 
    {
		integer foo(integer z){
			return z;
		}

		void main(){
			foo(x);
		}
    }